adding delete button to påmelding
